--- a/css/utilities.css
+++ b/css/utilities.css
@@ -58,6 +58,9 @@
 .padding-bottom-50 {
     padding-bottom:50px;
 }
+.margin-bottom-100 {
+    margin-bottom:100px;
+}
 .padding-right-0 {
     padding-right: 0;
 }
